@@ -27,6 +27,8 @@ Bugfixes:
 - NetStream.send in record mode not working (Jira APPSERVER-329)
 - NetStream.send "append" mode patch (Jira APPSERVER-338)
 - Memory leak in RemotingConnection (Jira APPSERVER-328)
+- Connection objects are not removed from parent scopes when a connection is refused in a sub-scope (Jira APPSERVER-261)
+- WAR deployer is failing to extract war files (Jira APPSERVER-337)
 
 Red5 0.8.0 RC1 (2008-09-29)
 ---------------------------
